fixed machine size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -288,5 +288,9 @@
   }
   .items {
     width: 20vw;
+    overflow-x: hidden;
+  }
+  .machine {
+    width: 35vw;
   }
 }
